--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dateformat": "^4.5.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "node-firebird": "^0.9.9",
