--- a/.env_example
+++ b/.env_example
@@ -9,11 +9,11 @@ WEB_URL='https://localhost:3000'
 # Database data
 DB_HOST='localhost'
 DB_USER='SYSDBA'
-DB_PASS='2501'
+DB_PASS=''
 DB_PORT=3050
 
 # DIRECTORIO BBDD
-DB_DIR='/home/jag/Proyectos/Web/Larcu/database/'
+DB_DIR='C:\WinVision\Base de datos\'
 DB_COMUN='COMUN'
 DB_EMPRESA='EMPRESA_'
 
