--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dateformat": "^4.5.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "json2csv": "^5.0.6",
     "node-firebird": "^0.9.9",
     "nodemon": "^2.0.7"
   }
