--- a/.env_example
+++ b/.env_example
@@ -4,7 +4,6 @@ APP_PORT=3000
 APP_VERSION=0.1
 APP_MIN_VERSION=0.1
 APP_NAME='API Winvision'
-WEB_URL='https://localhost:3000'
 
 # Database data
 DB_HOST='localhost'
@@ -16,6 +15,13 @@ DB_PORT=3050
 DB_DIR='C:\WinVision\Base de datos\'
 DB_COMUN='COMUN'
 DB_EMPRESA='EMPRESA_'
+
+# WOOCOMMERCE
+SECRET_KEY=''
+TIME_CHECK='60000'
+URL_STORE='https://'
+CONSUMER_KEY=''
+CONSUMER_SECRET=''
 
 # Logging
 LOG=false
