--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Inforcloud",
   "license": "ISC",
   "dependencies": {
+    "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dateformat": "^4.5.0",
