--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "init": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "exportcsv": "node scripts/export.js"
+    "exportcsv": "node scripts/export.js",
+    "match": "node scripts/match.js"
   },
   "repository": {
     "type": "git",
