--- a/.env_example
+++ b/.env_example
@@ -1,7 +1,7 @@
 # App data
 NODE_ENV='development'
 APP_PORT=3000
-APP_VERSION=0.2
+APP_VERSION=0.4
 APP_MIN_VERSION=0.1
 APP_NAME='API Winvision'
 
@@ -22,6 +22,9 @@ TIME_CHECK='60000'
 URL_STORE='https://'
 CONSUMER_KEY=''
 CONSUMER_SECRET=''
+
+# SHOPIFY
+SHOPIFY_SIGNATURE_SECRET=''
 
 # Logging
 LOG='false'
