--- a/.env_example
+++ b/.env_example
@@ -16,10 +16,12 @@ DB_DIR='C:\WinVision\Base de datos\'
 DB_COMUN='COMUN'
 DB_EMPRESA='EMPRESA_'
 
-# WOOCOMMERCE
-SECRET_KEY=''
+# SHOP
 TIME_CHECK='60000'
 URL_STORE='https://'
+
+# WOOCOMMERCE
+SECRET_KEY=''
 CONSUMER_KEY=''
 CONSUMER_SECRET=''
 
